# speech_techs

./: .gitignore  README.md  eval.py  main.py  pyproject.toml
src/: __init__.py  dataset.py  trainer.py
