[project]
name = "hw-2"
version = "0.1.0"
description = "Файн тюнинг GigaAM-CTC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "hydra-core",
    "datasets==3.6.0",
    "sentencepiece",
    "tqdm",
    "onnx",
    "onnxruntime",
    "pydub",
    "numpy",
    "jiwer",
    "pyyaml",
    "soundfile",
    "librosa",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pipwin>=0.5.2",
]
